Fixed z-index issue

--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -1,3 +1,7 @@
+.swiper {
+    z-index: 0;
+}
+
 .swiper-wrapper {
     max-height: 550px;
 }
